--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mariana Florez</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Mariana Florez</h1>
-    <hr>
-    <h4>Hola soy mariana desarroladora de software</h4>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+             <h1>Mariana Florez</h1>
+             <hr>
+             <h4>Hola soy mariana desarrolladora de software</h4>
+              <img src="./goku-dragon-ball-super-r33dysxh1ubub7nk.jpg" alt="foto" class="img-fluid">
+            </div>
+        </div>
+    </div>
+
+   
 </body>
 </html> 
